--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,3 +5,6 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+
+  script(src='vendors/jquery/jquery.min.js')
+  script(src='javascripts/main.js')
